# dmell

./: .gitignore  CMakeLists.txt  README.md  manifest.dmm
.github/workflows/: ci.yml  release.yml
build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-tests/Testing/Temporary/: CTestCostData.txt
build-tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  tests_dmell_cmd  tests_dmell_line  tests_dmell_vars
commands/cat/: CMakeLists.txt  README.md  cat.c
commands/catini/: CMakeLists.txt  README.md  catini.c
commands/cp/: CMakeLists.txt  README.md  cp.c
commands/find/: CMakeLists.txt  README.md  find.c
commands/grep/: CMakeLists.txt  README.md  grep.c
commands/head/: CMakeLists.txt  README.md  head.c
commands/ls/: CMakeLists.txt  README.md  ls.c
commands/mkdir/: CMakeLists.txt  README.md  mkdir.c
commands/module/: CMakeLists.txt  DMOD_API_PATCH.md  README.md  module.c
commands/mv/: CMakeLists.txt  README.md  mv.c
commands/printf/: CMakeLists.txt  README.md  printf.c
commands/ps/: CMakeLists.txt  README.md  ps.c
commands/rm/: CMakeLists.txt  README.md  rm.c
commands/rmdir/: CMakeLists.txt  README.md  rmdir.c
commands/tail/: CMakeLists.txt  README.md  tail.c
commands/touch/: CMakeLists.txt  README.md  touch.c
commands/which/: CMakeLists.txt  README.md  which.c
docs/: scripting-language.md
examples/: example.dmell
include/: dmell.h  dmell_cmd.h  dmell_handlers.h  dmell_hlp.h  dmell_ia.h  dmell_io.h  dmell_line.h  dmell_script.h  dmell_vars.h
src/: dmell.c  dmell_cmd.c  dmell_handlers.c  dmell_ia.c  dmell_io.c  dmell_line.c  dmell_script.c  dmell_vars.c
tests/: CMakeLists.txt  tests_dmell_cmd.cpp  tests_dmell_line.cpp  tests_dmell_vars.cpp  ut_main.cpp
tools/vscode-dme/: CHANGELOG.md  README.md  example.dme  language-configuration.json  package.json
tools/vscode-dme/syntaxes/: dme.tmLanguage.json
